@@ -2,6 +2,10 @@
 
 Changes with Apache 2.3.9
 
+  *) mod_cache: Make sure that we never allow a 304 Not Modified response
+     that we asked for to leak to the client should the 304 response be
+     uncacheable. PR45341 [Graham Leggett]
+
   *) mod_cache: Add the cache_status hook to register the final cache
      decision hit/miss/revalidate. Add optional support for an X-Cache
      and/or an X-Cache-Detail header to add the cache status to the
